# ghc-server

./: .dir-locals.el  .ghci  .gitignore  LICENSE  README.md  TODO.org  ghc-server.cabal  ghc-server.el
elisp/: Makefile  ghc-cmd.el  ghc-con.el  ghc-ident.el  ghc-log.el  ghc-macros.el  ghc-mode.el  ghc-msgs.el  ghc-process.el  ghc-repl.el  ghc-session.el  ghc-status.el  ghc-string.el  ghc.el
scripts/: test-ghcs
src/: DevelMain.hs  Elisp.hs  JSBeautify.hs  Main.hs  Node.hs  Repl.hs
src/Data/AttoLisp/: Easy.hs
src/GHC/: Compat.hs  Redirect.hs  Server.hs
src/GHC/Server/: Cabal.hs  Client.hs  Commands.hs  Controllers.hs  Defaults.hs  Duplex.hs  Eval.hs  Ghc.hs  IO.hs  Import.hs  Info.hs  Log.hs  Logging.hs  Server.hs  Sexp.hs  Slave.hs  TH.hs  Types.hs
src/GHC/Server/Commands/: Context.hs  Debug.hs  Eval.hs  Load.hs  REPL.hs
src/GHC/Server/Controller/: Context.hs  Debug.hs  Eval.hs  Info.hs  Load.hs  REPL.hs
src/GHC/Server/Model/: Find.hs  Ghc.hs  Info.hs
src/Server/: Client.hs  Commands.hs  Import.hs  Log.hs  Server.hs  Sexp.hs  Slave.hs  Types.hs
src/main/: Main.hs
