name:                ghc-server
version:             0.0
synopsis:            A server interface to GHC.
description:         A server interface to GHC.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable ghc-server
  main-is:           Main.hs
  hs-source-dirs:    src/
  build-depends:
    -- Hard versions
    ghc == 7.2.* || ==7.4.* || == 7.6.* || == 7.8.*,
    -- Ranged versions
    base >= 4 && < 5,
    -- Min versions
    text >= 0.11,
    ghc-paths >= 0.1,
    mtl >= 2.1,
    network >= 2.5,
    atto-lisp >= 0.2,
    bytestring >= 0.9,
    attoparsec >= 0.10,
    syb >= 0.4
