name:                ghc-server
version:             0.0
synopsis:            GHC service
description:         GHC service
                     .
                     Supported major GHC versions: 7.4, 7.6, 7.8
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:    src/
  ghc-options:       -O2 -Wall -threaded
  exposed-modules:   GHC.Server
                     GHC.Server.Commands
                     GHC.Server.Duplex
                     GHC.Server.Logging
                     GHC.Server.TH
                     GHC.Server.Types
                     GHC.Server.Ghc
                     GHC.Server.Cabal
                     GHC.Server.Eval
  other-modules:     GHC.Compat
  default-language: Haskell2010
  default-extensions: FlexibleInstances, TemplateHaskell
  build-depends:     atto-lisp
                   , attoparsec
                   , base >= 4 && <5
                   , bytestring
                   , ghc
                   , ghc-paths
                   , monad-logger
                   , mtl
                   , network
                   , stm
                   , template-haskell
                   , text
                   , unordered-containers
                   , Cabal
                   , directory
  if impl(ghc<7.4)
    build-depends: ghc >= 7.4
  if impl(ghc>=7.4)
    build-depends:
      -- Hard versions
      ghc ==7.4.* || == 7.6.* || == 7.8.*

executable ghc-server
  hs-source-dirs:    src/main
  if impl(ghc>=7.8)
    ghc-options:       -O2 -Wall -threaded -dynamic
  if impl(ghc<7.8)
    ghc-options:       -O2 -Wall -threaded
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
                   , ghc-server
                   , monad-logger
  default-language: Haskell2010
